# anki-generator

./: .gitignore  Dockerfile  anki_online.py  compose.yml  hello.py  pyproject.toml  requirements.txt
src/: anki_excel_sheet.py  anki_generator.py  template.xls
