[project]
name = "anki-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "genanki>=0.13.1",
    "pyexcel-ods>=0.6.0",
    "pyexcel>=0.7.1",
    "pyexcel-xls>=0.7.0",
    "pyexcel-xlsx>=0.6.0",
    "streamlit>=1.41.1",
    "gtts>=2.5.4",
]
